# MeatBoy

./: .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
assets/levels/: easy.level  hard.level  moderate.level
src/: CMakeLists.txt  main.cpp
src/game/: CMakeLists.txt  ConcreteFactory.cpp  ConcreteFactory.h  Entity.cpp  Entity.h  EntityView.cpp  EntityView.h  Game.cpp  Game.h  Goal.cpp  Goal.h  LevelState.cpp  LevelState.h  MenuState.h  Player.cpp  Player.h  State.cpp  State.h  StateManager.cpp  StateManager.h  View.cpp  View.h  Wall.h
src/logic/: AbstractFactory.h  CMakeLists.txt  Camera.cpp  Camera.h  Entity.cpp  Entity.h  EntityModel.cpp  EntityModel.h  Goal.cpp  Goal.h  Observer.h  Player.cpp  Player.h  Stopwatch.cpp  Stopwatch.h  Subject.cpp  Subject.h  Wall.cpp  Wall.h  World.cpp  World.h
